--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,28 +2,29 @@
  * @Author: Ghan 
  * @Date: 2019-10-30 11:33:11 
  * @Last Modified by: Ghan
- * @Last Modified time: 2019-10-30 11:44:02
+ * @Last Modified time: 2019-11-01 10:30:36
  */
 
+// 主色调
+@theme-color: #2a86fc;
 // placeholer-text-color: placeholer颜色
 @placeholer-text-color: #cccccc;
 // base-font-color: 字体颜色
-@base-font-color: #333333;
-
+@base-font-color: #666666;
 // 标题字体大小
-@title-text-fontsize: 18;
+@title-text-fontsize: 30px;
 // 标题字体颜色
 @title-text-color: @base-font-color;
-
 // 普通文字字体大小
-@normal-text-fontsize: 14;
+@normal-text-fontsize: 26px;
 // 普通文字字体颜色
 @normal-text-color: @base-font-color;
-
 // 小文本文字字体大小
-@small-text-fontsize: 12;
+@small-text-fontsize: 22px;
 // 小文本文字字体颜色
 @small-text-color: @base-font-color;
+// primary-button-size: 按钮大小 
+@primary-button-size: 80px;
 
 .title-text {
   font-size: @title-text-fontsize;
@@ -46,9 +47,95 @@
   height: 100%;
 }
 
-.flex (@alignItems: 'flex-start', @justifyContent: 'flex-start', @flexDirection: 'row') {
+.flex (@alignItems: flex-start, @justifyContent: flex-start, @flexDirection: row) {
   display: flex;
   align-items: @alignItems;
   justify-content: @justifyContent;
   flex-direction: @flexDirection;
 } 
+
+.background-image (@imageUrl) {
+  background-image: ~"url(@{imageUrl})";
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.margin(@value: 1px, @position: all) when (@position = all) {
+  margin-top: @value;
+  margin-right: @value;
+  margin-bottom: @value;
+  margin-left: @value;
+}
+
+.margin(@value: 1px, @position: all) when (@position = t) {
+  margin-top: @value;
+}
+
+.margin(@value: 1px, @position: all) when (@position = r) {
+  margin-right: @value;
+}
+
+.margin(@value: 1px, @position: all) when (@position = b) {
+  margin-bottom: @value;
+}
+
+.margin(@value: 1px, @position: all) when (@position = l) {
+  margin-left: @value;
+}
+
+.margin(@value: 1px, @position: all) when (@position = tb) {
+  margin-top: @value;
+  margin-bottom: @value;
+}
+
+.margin(@value: 1px, @position: all) when (@position = lr) {
+  margin-left: @value;
+  margin-right: @value;
+}
+
+
+.padding(@value: 1px, @position: all) when (@position = all) {
+  padding-top: @value;
+  padding-right: @value;
+  padding-bottom: @value;
+  padding-left: @value;
+}
+
+.padding(@value: 1px, @position: all) when (@position = t) {
+  padding-top: @value;
+}
+
+.padding(@value: 1px, @position: all) when (@position = r) {
+  padding-right: @value;
+}
+
+.padding(@value: 1px, @position: all) when (@position = b) {
+  padding-bottom: @value;
+}
+
+.padding(@value: 1px, @position: all) when (@position = l) {
+  padding-left: @value;
+}
+
+.padding(@value: 1px, @position: all) when (@position = tb) {
+  padding-top: @value;
+  padding-bottom: @value;
+}
+
+.padding(@value: 1px, @position: all) when (@position = lr) {
+  padding-left: @value;
+  padding-right: @value;
+}
+
+.theme-button {
+  background-color: @theme-color !important;
+  height: @primary-button-size !important;
+  line-height: @primary-button-size !important;
+  border-radius: @primary-button-size / 2 !important;
+  font-size: @title-text-fontsize !important;
+}
+
+.theme-input-placeholder {
+  font-size: @normal-text-fontsize;
+  color: #cccccc;
+}
