--- a/src/pages/test/style/test.list.less
+++ b/src/pages/test/style/test.list.less
@@ -11,19 +11,29 @@
   &-left {
     width: @list-left-width;
     &-item {
-      padding-top: 10px;
-      padding-bottom: 10px;
+      padding-top: 20px;
+      padding-bottom: 20px;
       border-bottom: 1px solid;
       .flex('center', 'center');
+    }
+    &-current {
+      background-color: #000000;
+      &-text {
+        color: #ffffff;
+      }
     }
   }
   &-right {
     display: flex;
+    flex-direction: column;
     flex: 1;
 
     &-item {
       padding: 20px;
       border-bottom: 1px solid;
+    }
+    &-title {
+      background-color: yellow;
     }
   }
 }
