* 新增 listrow组件和modal组合组件 并加入测试页面

--- a/src/pages/test/style/test.main.less
+++ b/src/pages/test/style/test.main.less
@@ -7,4 +7,24 @@
   &-divider {
     margin-top: 20px;
   }
+
+  &-modal {
+    &-header {
+      // background-color: aqua;
+      background: linear-gradient(0deg,rgba(42,134,252,1) 2%,rgba(69,150,255,1) 100%);
+      color: #ffffff;
+      .padding(22px, tb);
+      .flex(center, center, row);
+    }
+    &-form {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+    }
+  }
+
+  &-form {
+    .padding(20px);
+  }
 }
+
