--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -49,3 +49,13 @@ button {
   color: #acacac !important;
   font-size: 28px !important;
 }
+
+.item-content__info-title {
+  font-size: 26px !important;
+  color: #666666 !important;
+}
+
+.item-extra__info {
+  font-size: 26px !important;
+  color: #999999 !important;
+}
