--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -3,6 +3,7 @@
  * 比较理想的是 View 标签统一为 display: flex; flex-direction: column
  * 但是 H5 上内置组件样式可能会错乱，因此暂时不这样处理，有用到 flex 的地方都显式声明主轴方向即可
  */
+@import "./theme.less";
 
 /* weapp */
 page {
@@ -58,4 +59,10 @@ button {
 .item-extra__info {
   font-size: 26px !important;
   color: #999999 !important;
+}
+
+.layout-body {
+  .padding(0px, lr) !important;
+  .padding(0px, t) !important;
+  .padding(130px, b) !important;
 }
