--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,7 +2,7 @@
  * @Author: Ghan 
  * @Date: 2019-10-30 11:33:11 
  * @Last Modified by: Ghan
- * @Last Modified time: 2019-11-05 14:27:26
+ * @Last Modified time: 2019-11-05 16:22:13
  */
 
 // 主色调
@@ -205,4 +205,10 @@
     .config-button(@theme-color, @list-row-button-height, @list-row-button-height / 2,  22px);
     .padding(20px, lr) !important;
   }
+}
+
+.layout-body {
+  .padding(0px, lr) !important;
+  .padding(0px, t) !important;
+  .padding(130px, b) !important;
 }
