* 新增 添加会员页面 form.row组件加入input功能

--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,7 +2,7 @@
  * @Author: Ghan 
  * @Date: 2019-10-30 11:33:11 
  * @Last Modified by: Ghan
- * @Last Modified time: 2019-11-05 16:22:13
+ * @Last Modified time: 2019-11-06 15:02:10
  */
 
 // 主色调
@@ -204,6 +204,13 @@
   &-confirm-button {
     .config-button(@theme-color, @list-row-button-height, @list-row-button-height / 2,  22px);
     .padding(20px, lr) !important;
+  }
+  &-input {
+    .padding(0px, tb) !important;
+    &-placeholder {
+      font-size: 26px !important;
+      color: #cccccc !important;
+    }
   }
 }
 
