--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12113,6 +12113,11 @@
   flex-direction: row;
 }
 
+.component-list-row-input {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+
 .item-extra__image {
   width: 40rpx !important;
   height: 40rpx !important;
