--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -61,6 +61,10 @@ button {
   color: #999999 !important;
 }
 
+.at-input__input {
+  font-size: 26px !important;
+}
+
 .layout-body {
   .padding(0px, lr) !important;
   .padding(0px, t) !important;
