* 新增 收款页面 \ * 新增 会员编辑页面 \ * 修改 formcard组件加入可选阴影

--- a/src/component/card/form.card.less
+++ b/src/component/card/form.card.less
@@ -5,8 +5,10 @@
 .@{form-prefix} {
   .margin(10px, t);
   .theme-card;
-  .theme-shadow;
   &-buttons {
     .flex(center, center);
+  }
+  &-shadow {
+    .theme-shadow;
   }
 }
