--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,7 +2,7 @@
  * @Author: Ghan 
  * @Date: 2019-10-30 11:33:11 
  * @Last Modified by: Ghan
- * @Last Modified time: 2019-11-06 15:02:10
+ * @Last Modified time: 2019-11-07 10:49:09
  */
 
 // 主色调
@@ -218,4 +218,15 @@
   .padding(0px, lr) !important;
   .padding(0px, t) !important;
   .padding(130px, b) !important;
+}
+
+
+/**
+ * @Author: Ghan 
+ * @Date: 2019-10-30 11:33:11 
+ * @Last Modified by: Ghan
+ * pay 部分配置 支付
+ */
+.theme-pay-button {
+  .config-button(#ffffff, @primary-button-size, @primary-button-size / 2, 30px, @theme-color);
 }
