--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -1,13 +1,13 @@
 @import "../../styles/theme.less";
 
 @product-prefix: component-product;
-
-@product-border-color: #C1C0C9;
+@product-border-color: #f9f9f9;
 @product-image-size: 150px;
-
+// @product-image-size: 64PX;
+@product-content-size: 150px;
+// @product-content-size: 64PX;
 @product-title-font: 32px;
 @product-title-color: #444444;
-
 @product-price-font: 30px;
 @product-price-color: #FC4E44;
 @product-normal-color: #cccccc;
@@ -25,6 +25,9 @@
     &-cover {
       width: @product-image-size;
       height: @product-image-size;
+      border-radius: 10px;
+      border: 1px solid @product-border-color;
+      overflow: hidden;
       &-image {
         width: 100%;
         height: 100%;
@@ -33,7 +36,9 @@
     &-detail {
       .margin(10px, l);
       display: flex;
+      height: @product-content-size;
       flex-direction: column;
+      justify-content: space-between;
       &-bar {
         .flex(center, flex-start, row);
       }
@@ -46,7 +51,17 @@
     font-weight: bold;
   }
   &-price {
-    font-size: @product-price-font;
+    font-size: @product-price-font + 14px;
     color: @product-price-color;
+    font-weight: bold;
+    &-bge {
+      font-size: @product-price-font;
+      color: @product-price-color;
+      font-weight: bold;
+    }
+  }
+  &-normal {
+    font-size: @product-price-font;
+    color: @product-normal-color;
   }
 }
