--- a/src/pages/product/style/product.less
+++ b/src/pages/product/style/product.less
@@ -69,6 +69,9 @@
       display: flex;
       flex-direction: column;
       flex: 1;
+      &-container {
+        .padding(@cart-height, b);
+      }
       &-header {
         .padding(20px);
         display: flex;
