* 新增 商品详情和修改

--- a/src/component/card/form.card.less
+++ b/src/component/card/form.card.less
@@ -1,6 +1,7 @@
 @import "../../styles/theme.less";
 
 @form-prefix: component-form;
+@form-input-width: 200px;
 
 .@{form-prefix} {
   .margin(10px, t);
@@ -10,5 +11,8 @@
   }
   &-shadow {
     .theme-shadow;
+  }
+  &-input {
+    width: @form-input-width;
   }
 }
