--- a/src/pages/product/style/product.less
+++ b/src/pages/product/style/product.less
@@ -187,5 +187,15 @@
     &-submit {
       .margin(60px, tb);
     }
+    &-modal {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+      &-text {
+        font-size: 26px;
+        color: @base-font-color;
+        .margin(26px, b);
+      }
+    }
   }
 }
