--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -66,6 +66,10 @@ button {
   font-size: 26px !important;
 }
 
+.at-modal__container {
+  width: 590px !important;
+}
+
 .layout-body {
   .padding(0px, lr) !important;
   .padding(0px, t) !important;
