--- a/src/pages/product/style/product.less
+++ b/src/pages/product/style/product.less
@@ -208,4 +208,16 @@
       }
     }
   }
+  &-manage {
+    &-list {
+      position: absolute;
+      top: @product-header-height;
+      width: 100%;
+      &-container {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+      }
+    }
+  }
 }
