* 新增 下单，收款码展示

--- a/src/component/card/form.card.less
+++ b/src/component/card/form.card.less
@@ -15,4 +15,9 @@
   &-input {
     width: @form-input-width;
   }
+  &-price {
+    font-size: 26px;
+    color: #FC4E44;
+    padding-right: 18px;
+  }
 }
