--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -92,4 +92,13 @@
       }
     }
   }
+
+  &-stepper {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    &-container {
+      .flex(center, center, row);
+    }
+  }
 }
