--- a/src/pages/pay/style/pay.less
+++ b/src/pages/pay/style/pay.less
@@ -56,6 +56,10 @@
         width: @pay-receive-code-size;
         height: @pay-receive-code-size;
         .margin(77px, t);
+        &-image {
+          width: 100%;
+          height: 100%;
+        }
       }
       &-text {
         font-size: 26px;
