--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -75,3 +75,9 @@ button {
   .padding(0px, t) !important;
   .padding(130px, b) !important;
 }
+
+.at-button--circle {
+  min-width: 60rpx !important;
+  max-width: 60rpx !important;
+  width: 60rpx !important; 
+}
