--- a/src/pages/product/style/product.less
+++ b/src/pages/product/style/product.less
@@ -287,6 +287,24 @@
         }
       }
     }
+    &-member {
+      &-input {
+        .padding(30px);
+        .flex(center, space-between, row);
+        &-icon {
+          width: 40px;
+          height: 40px;
+          &-img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        &-box {
+          width: 320px;
+          font-size: 26px;
+        }
+      }
+    }
   }
   &-row {
     .padding(24px, tb);
