--- a/src/pages/home/style/home.less
+++ b/src/pages/home/style/home.less
@@ -4,27 +4,38 @@
 @icon-size: 75px;
 
 .@{home-prefix} {
-  .flex(center, flex-start, column);
-  .padding(30px, lr);
-  background-color: #f8f8f8;
   &-bg {
-    .background-image('//net.huanmusic.com/weapp/bg_member.png');
+    .background-image('//net.huanmusic.com/weapp/bg_home.png');
     width: 100%;
     height: 260px;
   }
+  &-container {
+    .flex(center, flex-start, column);
+    .padding(30px, lr);
+    background-color: #f8f8f8;
+    height: 100%;
+    width: 100%;
+  }
   &-name {
     .flex(center);
+    .margin(-210px, t);
     width: 100%;
     &-icon {
       .margin(6px, r);
     }
     &-text {
       // .title-text(#ffffff);
-      .title-text();
+      font-size: 36px;
+      color: #ffffff;
+      font-weight: bold;
     }
   }
   &-card {
     width: 690px;
+    .margin(15px, t);
+    &-icon {
+      .margin(16px, b);
+    }
   }
   &-icon {
     width: @icon-size;
