--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -81,3 +81,13 @@ button {
   max-width: 60rpx !important;
   width: 60rpx !important; 
 }
+
+.at-badge__num {
+  right: 0PX !important;
+  border-radius: 14px !important;
+}
+
+.component-cart-bge .at-badge__num {
+  right: 12PX !important;
+  top: 2PX !important;
+}
