--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -99,6 +99,23 @@
     bottom: 0;
     &-container {
       .flex(center, center, row);
+      .margin(14px, b);
+    }
+    &-text {
+      min-width: 60px;
+      .flex(center, center);
+      font-size: 30px;
+      color: #666666;
+    }
+    &-button {
+      width: 50px;
+      height: 50px;
+      &-reduce {
+        .background-image('//net.huanmusic.com/weapp/bt_shanchu.png');
+      }
+      &-add {
+        .background-image('//net.huanmusic.com/weapp/bt_yixuan_increase.png');
+      }
     }
   }
 }
