--- a/src/pages/member/style/member.less
+++ b/src/pages/member/style/member.less
@@ -4,6 +4,7 @@
 @member-card-width: 690px;
 @member-avator-size: 150px;
 @member-search-icon-size: 28px;
+@member-scan-icon-size: 40px;
 @member-search-add-icon-size: 40px;
 @member-search-input-font-size: 26px;
 @member-search-zindex: 99;
@@ -21,7 +22,7 @@
     height: 255px;
     width: 100%;
     &-color {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       right: 0;
@@ -33,6 +34,12 @@
   &-card {
     position: relative;
     background-color: #ffffff;
+    &-header {
+      .flex(center, center, row);
+      .padding(25px, tb);
+      font-size: 24px;
+      color: #cccccc;
+    }
   }
   &-buttons {
     .padding(15px, tb);
@@ -55,6 +62,24 @@
       width: 150px;
       height: 150px;
     }
+    &-row {
+      &-icons {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        max-width: 300px;
+      }
+      &-icon {
+        border-radius: 10px;
+        background-color: #9DC8FF;
+        .padding(7px, tb);
+        .padding(16px, lr);
+        font-size: 18px;
+        color: #ffffff;
+        .margin(5px, l);
+        .margin(5px, b);
+      }
+    }
   }
   &-edit {
     .margin(80px, t);
@@ -64,6 +89,7 @@
     flex-direction: column;
     position: relative;
     &-header {
+      // z-index: @member-search-zindex + 100;
       .padding(20px, tb);
       .padding(30px, lr);
       position: fixed;
@@ -85,7 +111,7 @@
         }
       }
       &-search {
-        z-index: @member-search-zindex;
+        z-index: @member-search-zindex + 100;
         width: 580px;
         height: 60px;
         border-radius: 30px;
@@ -96,10 +122,14 @@
           height: @member-search-icon-size;
           .margin(15px, r);
         }
+        &-scan {
+          width: @member-scan-icon-size;
+          height: @member-scan-icon-size;
+        }
         &-input {
           font-size: @member-search-input-font-size;
           color: @base-font-color;
-          width: 520px - 50px;
+          width: 520px - 50px - @member-scan-icon-size;
           &-holder {
             color: @placeholer-text-color;
           }
@@ -110,7 +140,7 @@
   &-list {
     flex: 1;
     &-container {
-      position: fixed;
+      position: absolute;
       top: @member-header-size;
       width: 100%;
     }
