--- a/src/pages/pay/style/pay.less
+++ b/src/pages/pay/style/pay.less
@@ -76,4 +76,91 @@
       }
     }
   }
+
+  &-input {
+    background-color: #f9f9f9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .padding(40px, t);
+    &-view {
+      width: 690px;
+    }
+    &-box {
+      display: flex;
+      flex-direction: column;
+      .padding(40px);
+      &-title {
+        font-size: 26px;
+        color: #666666;
+      }
+      &-input {
+        .padding(40px, tb);
+        border-bottom: 1px solid #E3E3E3;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        &-money {
+          font-size: 50px;
+          color: #444444;
+          font-weight: bold;
+          .margin(15px, r);
+        }
+        &-input {
+          width: 100%;
+          font-size: 40px;
+          color: #444444;
+          font-weight: bold;
+          &-placeholder {
+            font-size: 30px;
+            font-weight: normal;
+          }
+        }
+      }
+
+      &-button {
+        width: 100%;
+        height: 80px;
+        border-radius: 40px;
+        color: #ffffff;
+        font-size: 30px;
+        .flex(center, center, row);
+        .margin(40px, t);
+        &-disabled {
+          background-color: #cccccc;
+        }
+        &-active {
+          background-color: @theme-color;
+        }
+      }
+    }
+  }
+  
+  &-result {
+    &-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      &-image {
+        width: 750px;
+        height: 420px;
+        .margin(110px, t);
+      }
+      &-title {
+        font-size: 36px;
+        color: #666666;
+      }
+      &-price {
+        font-size: 50px;
+        color: #444444;
+        font-weight: bold;
+        .margin(40px, t);
+      }
+      &-button {
+        width: 670px;
+        .margin(90px, t);
+      }
+    }
+  }
 }
