* 新增 一期业务完整提交

--- a/src/component/cart/cart.less
+++ b/src/component/cart/cart.less
@@ -87,6 +87,7 @@
       background-color: #f8f8f8;
       .flex(center, space-between, row);
       color: @cart-list-header-font-color;
+      font-size: 26px;
       &-empty {
         .flex(center, center, row);
         &-icon {
