--- a/src/pages/product/style/product.less
+++ b/src/pages/product/style/product.less
@@ -256,6 +256,7 @@
       .margin(20px, t);
     }
     &-container {
+      .padding(@cart-height + 50px, b);
       // position: absolute;
       // top: 0;
       // bottom: @cart-height + 10px;
@@ -270,7 +271,7 @@
       // .padding(30px, lr);
     }
     &-footer {
-      position: absolute;
+      position: fixed;
       bottom: 0;
       left: 0;
       right: 0;
