--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,7 +2,7 @@
  * @Author: Ghan 
  * @Date: 2019-10-30 11:33:11 
  * @Last Modified by: Ghan
- * @Last Modified time: 2019-11-20 10:27:09
+ * @Last Modified time: 2019-12-03 13:41:16
  */
 
 // 主色调
@@ -144,7 +144,7 @@
 }
 
 .theme-button {
-  .config-button(@theme-color, @primary-button-size, @primary-button-size / 2,  @title-text-fontsize);
+  .config-button(@theme-color, @primary-button-size, @primary-button-size / 2,  30px);
 }
 
 .theme-input-placeholder {
@@ -287,7 +287,7 @@
 .layout-body {
   .padding(0px, lr) !important;
   .padding(0px, t) !important;
-  .padding(130px, b) !important;
+  .padding(200px, b) !important;
 }
 
 
