--- a/src/component/card/form.card.less
+++ b/src/component/card/form.card.less
@@ -19,6 +19,23 @@
   &-price {
     font-size: 26px;
     color: #FC4E44;
-    padding-right: 18px;
+    // padding-right: 18px;
+  }
+  &-black {
+    font-size: 26px;
+    color: #666666;
+  }
+  &-gray {
+    font-size: 26px;
+    color: #999999;
+  }
+  &-placeholder {
+    font-size: 26px;
+    color: #666666;
+  }
+  &-arrow {
+    width: 13px;
+    height: 24px;
+    margin-left: 16px;
   }
 }
