--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -49,13 +49,34 @@
         .flex(center, flex-start, row);
       }
     }
+    &-manage {
+      .margin(10px, l);
+      display: flex;
+      width: 750px - 150px - 50px - 20px;
+      flex-direction: column;
+      justify-content: space-between;
+      &-bar {
+        .flex(center, flex-start, row);
+      }
+    }
   }
 
   &-title {
+    width: @product-content-width;
     font-size: @product-title-font;
     color: @product-title-color;
     font-weight: bold;
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-clamp: 2;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    &-manage {
+      width: 100%;
+    }
   }
+  
   &-price {
     font-size: @product-price-font + 14px;
     color: @product-price-color;
@@ -97,7 +118,7 @@
 
   &-stepper {
     position: absolute;
-    right: 0;
+    right: 24rpx;
     bottom: 0;
     &-container {
       .flex(center, center, row);
