--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -206,6 +206,12 @@
       display: flex;
       flex-direction: column;
       flex: 1;
+      &-tip {
+        .margin(28px, b);
+        font-size: 26px;
+        color: #666666;
+        .padding(10px, l);
+      }
       &-text {
         font-size: 26px;
         color: @base-font-color;
